# PAPRAS-V0-Public

./: .gitignore  Dockerfile  README.md  checklist.md  checklist_eoh.md  checklist_homecare.md
open_manipulator_p_controls/open_manipulator_p_controllers/: CMakeLists.txt  controller_plugin.xml  package.xml
open_manipulator_p_controls/open_manipulator_p_controllers/config/: 2arm_stand_joint_controller.yaml  2arm_stand_joint_controller_gazebo.yaml  joint_trajectory_controller.yaml  joint_trajectory_controller_coffee_camera.yaml  joint_trajectory_controller_coffee_camera_gazebo.yaml  joint_trajectory_controller_coffee_gazebo.yaml  joint_trajectory_controller_gazebo.yaml  joint_trajectory_controller_stand.yaml
open_manipulator_p_controls/open_manipulator_p_controllers/launch/: joint_trajectory_controller.launch
open_manipulator_p_controls/open_manipulator_p_controls/: CMakeLists.txt  package.xml
open_manipulator_p_controls/open_manipulator_p_hw/: CMakeLists.txt  package.xml
open_manipulator_p_simulations/open_manipulator_p_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
open_manipulator_p_simulations/open_manipulator_p_simulations/: CHANGELOG.rst  CMakeLists.txt  package.xml
papras_controls/: .open_manipulator_p_controls.rosinstall  .travis.yml  99-papras-cdc.rules  CMakeLists.txt  NOTICE  package.xml  papras_hardware.xml  setup.py
papras_controls/config/: joint_limits.yaml  joint_trajectory_controller.yaml  joint_trajectory_controller_7dof.yaml  joint_trajectory_controller_7dof_gazebo.yaml  joint_trajectory_controller_gazebo.yaml  left_arm_servo_config.yaml  papras_controller_effort.yaml  papras_servo_config_hw.yaml  papras_servo_config_sim.yaml  right_arm_servo_config.yaml
papras_controls/include/papras_hw/: dynamixel_hardware_interface.hpp  (+2 more)
papras_controls/launch/: controller_utils.launch  moveit.launch.py  papras_hw.launch  servo.launch  visual_servo.launch
papras_controls/papras_controllers/: CMakeLists.txt  package.xml
papras_controls/papras_controls/: CMakeLists.txt  package.xml
papras_controls/papras_hw/: CMakeLists.txt  package.xml
papras_controls/papras_sim/: CMakeLists.txt  package.xml
papras_controls/papras_teleop/: CMakeLists.txt  package.xml
papras_controls/param/: ReadMe.md
papras_controls/src/: hardware_interface.cpp  omp_control_node.cpp  papras_control_node.cpp  papras_hardware_interface.cpp
papras_demo/: CMakeLists.txt  package.xml
papras_demo/config/: _coffee_demo_cache.yaml  _coffee_demo_cache_backup.yaml  _coffee_demo_cache_mon_night.yaml  cage_arm_config.yaml  joint_state_controller.yaml  mission_plan_cage.yaml  mission_plan_tea_table.yaml  spot_mount_config.yaml  tea_chess_moves.yaml  tea_chess_moves_old.yaml
papras_demo/launch/: _demo_backpack.launch  _demo_cage.launch  _demo_coffee.launch  _demo_coffee_arm3.launch  _demo_coffee_arm3_nogripper.launch  _demo_coffee_old.launch  _demo_homecare.launch  _demo_homecare_hw_OPC.launch  _demo_homecare_hw_big_table.launch  _demo_homecare_hw_kitchen.launch  _demo_homecare_hw_roomba.launch  _demo_homecare_hw_tea_table.launch  _demo_homecare_hw_wall_mount.launch  _demo_homecare_sim.launch  _demo_kitchen.launch  _demo_single_arm.launch  _demo_spot_mount.launch  _demo_stand.launch  _demo_tea_table.launch  arm_reconfigure_test.launch  cage_tasks.launch  chess_demo_calibration.launch  coffee_tasks.launch  dope_detect.launch  gazebo_roomba.launch  kitchen_fsm.launch  kitchen_roomba_handoff.launch  kitchen_sink_to_dishwasher.launch  lambda_coffee.launch  lambda_kitchen.launch  lambda_spot.launch  lambda_tea_table.launch  papras_calibration.launch  papras_check_calibration.launch  papras_controller.launch  papras_homecare_handoff_fsm.launch  pick_place_demo.launch  robot.launch  roomba_nav.launch  rosbag_record.launch  (+6 more)
papras_demo/scripts/: backpack.py  launch_roomba_nav_demo.bash  op2papras.py  setup_roomba_env.sh  spot_eoh.py
papras_demo/src/: arm1_joints_chess.yaml  arm1_joints_chess_7.yaml  arm1_joints_chess_new_measurements_adjusted_z.yaml  arm1_joints_chess_new_measurements_adjusted_z8up.yaml  arm1_joints_chess_new_measurements_newz.yaml  cage_tasks.cpp  chess.py  chess_rr.py  coffee_demo.cpp  collect_joint_positions_chess.py  command_operator.cpp  handoff_fsm.cpp  kitchen_fsm.cpp  kitchen_roomba_handoff.cpp  kitchen_sink_to_dishwasher.cpp  orientations.py  pick_place.cpp  plan_grasps_service.cpp  roomba_nav.cpp  roomba_nav.py  stand_tasks.cpp  tea_chess_calibration.cpp  tea_chess_demo.cpp  tea_demo.cpp  test_multi.cpp  wall_demo.cpp
papras_gazebo/: CMakeLists.txt  package.xml
papras_gazebo/config/: arm_controller.yaml  gripper_controller.yaml  mission_plan_coffee_demo_2arm.yaml  mission_plan_kitchen.yaml
papras_gazebo/launch/: 2arm_stand_system_urdf.launch  3arm_joint_trajectory_controller.launch  _demo_2arm_stand.launch  _demo_coffee.launch  _demo_kitchen.launch  _demo_multi_arm.launch  _demo_single_arm.launch  coffee_demo.launch  command_operator.launch  controller_utils.launch  multi_robot_simulation.launch  one_arm.launch  robot.launch  robots.launch  robots_multinode.launch  system_urdf.launch
papras_gazebo/src/: arm3_test.cpp  coffee_demo.cpp  command_operator.cpp  jointid2usbconfig_assigner.py
papras_gazebo/worlds/: 2arm_stand.world  papras_system.world
papras_moveit/: CMakeLists.txt  package.xml
papras_moveit/launch/: cup_demo.launch
papras_moveit/src/: cup_demo.cpp
papras_simple_demo/: CMakeLists.txt  package.xml
papras_simple_demo/config/: hardware.yaml  papras_servo_config.yaml
papras_simple_demo/launch/: gazebo.launch.py  hw.launch.py  servo.launch  sim.launch.py  simple_7dof_demo_sim.launch  simple_demo_rviz.launch.py  simple_demo_sim.launch
papras_simple_demo/src/: papras_simple_demo.cpp  servo_keyboard_input.cpp
papras_simple_demo/urdf/: simple_robot.urdf.xacro  simple_robot_7dof.urdf.xacro  simple_robot_gazebo.urdf.xacro  test.urdf
papras_utils/: CMakeLists.txt  package.xml
papras_utils/papras_utils/: CMakeLists.txt  package.xml
papras_utils/rqt_perspectives/: 3x_joint_trajectory_plot.perspective
papras_utils/rviz/: homecare.rviz
(+1054 files in other folders)
