<?xml version="1.0"?>
<package format="2">
  <name>open_manipulator_p_controls</name>
  <version>2.0.1</version>
  <description>ROS packages for open_manipulator_p_controls</description>
  <license>Apache 2.0</license>

  <author email="jhshim@robotis.com">Ryan Shim</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <!-- <url type="website">http://wiki.ros.org/open_manipulator_p_controls</url> -->
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/openmanipulator</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/open_manipulator_p</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/open_manipulator_p/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>open_manipulator_p_controllers</exec_depend>
  <exec_depend>open_manipulator_p_hw</exec_depend>
  <exec_depend>open_manipulator_p_moveit_config</exec_depend>
  <export><metapackage/></export>
</package>
